test/types/type_variables/deitz/part7/construct-1b.good
construct-1b.chpl:1: In function '__init_construct-1b':
construct-1b.chpl:6: error: Unresolved call 'R(t=float, x="deitz was here")'
error: Candidates are:
construct-1b.chpl:1: error:   R(type t, x: t)
